fix: 1. adjust display of img hover in rooms 2. add highlight on info of room 3. shrink gap between filter-container and room list

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
   background: var(--mainWhite);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.4;
+  font-size: 16px;
 }
 h1 {
   font-size: 3em;
@@ -302,9 +303,6 @@ h6 {
   box-shadow: var(--lightShadow);
   transition: var(--mainTransition);
 }
-.room:hover {
-  box-shadow: var(--darkShadow);
-}
 
 .img-container {
   position: relative;
@@ -335,13 +333,10 @@ h6 {
 }
 .room-link {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: calc(50% - 20px);
+  left: calc(50% - 70px);
   transform: scale(0);
   transition: all 0.3s linear;
-}
-.img-container:hover {
-  background: rgba(0, 0, 0, 0.8);
 }
 .img-container:hover img {
   opacity: 0.3;
@@ -350,7 +345,7 @@ h6 {
   opacity: 0;
 }
 .img-container:hover .room-link {
-  transform: translate(-50%, -50%) scale(1);
+  transform: scale(1);
 }
 .room-info {
   background: var(--darkGrey);
@@ -414,6 +409,9 @@ h6 {
 .info h6 {
   font-weight: 300;
 }
+.info h6 span:first-of-type {
+  box-shadow: inset 0 -10px gold;
+}
 .room-extras {
   width: 80vw;
   margin: 0 auto 3rem auto;
@@ -444,7 +442,7 @@ h6 {
 /* end of single room*/
 /* roomlist */
 .roomslist {
-  padding: 5rem 0;
+  padding: 2rem 0 5rem;
 }
 .roomslist-center {
   width: 80vw;
@@ -469,7 +467,7 @@ h6 {
 /* end of roomlist */
 /*  rooms filter*/
 .filter-container {
-  padding: 5rem 0;
+  padding: 5rem 0 2rem;
 }
 .filter-form {
   width: 60vw;
